--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,14 +13,11 @@
         <div id="divChat">
             <div>List user:</div>
             <ul id="ulUser"></ul>
+            <input type="text" id="txtReceiver" placeholder="Enter your friend's username'" />
             <input type="text" id="txtMessage" placeholder="Enter your message"/>
             <button id="btnSend">CLICK</button>
             <div>List message:</div>
-            <ul id="ulMessage">
-                <li>hello</li>
-                <li>pho1</li>
-                <li>pho1</li>
-            </ul>
+            <ul id="ulMessage"></ul>
         </div>
     </body>
 </html>
