Event listener li

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,11 @@
     <head>
         <title>Khoa Pham</title>
         <script src="bundle.js"></script>
+        <style>
+            .red {
+                color: red
+            }
+        </style>
     </head>
     <body>
         <h1>Khoa Pham Training</h1>
@@ -12,7 +17,12 @@
         </div>
         <div id="divChat">
             <div>List user:</div>
-            <ul id="ulUser"></ul>
+            <ul id="ulUser">
+                <li>AAA</li>
+                <li>BBB</li>
+                <li>CCC</li>
+                <li>DDD</li>
+            </ul>
             <input type="text" id="txtReceiver" placeholder="Enter your friend's username'" />
             <input type="text" id="txtMessage" placeholder="Enter your message"/>
             <button id="btnSend">CLICK</button>
