--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,31 +3,12 @@
     <head>
         <title>Khoa Pham</title>
         <script src="bundle.js"></script>
-        <style>
-            .red {
-                color: red
-            }
-        </style>
     </head>
     <body>
-        <h1>Khoa Pham Training</h1>
-        <div id="divSignUp">
-            <input type="text" id="txtUsername" placeholder="Enter your username"/>
-            <button id="btnSignUp">CLICK</button>
-        </div>
-        <div id="divChat">
-            <div>List user:</div>
-            <ul id="ulUser">
-                <li>AAA</li>
-                <li>BBB</li>
-                <li>CCC</li>
-                <li>DDD</li>
-            </ul>
-            <input type="text" id="txtReceiver" placeholder="Enter your friend's username'" />
-            <input type="text" id="txtMessage" placeholder="Enter your message"/>
-            <button id="btnSend">CLICK</button>
-            <div>List message:</div>
-            <ul id="ulMessage"></ul>
-        </div>
+        <p id="connectId"></p>
+        <br />
+        <input type="text" id="otherId" />
+        <br /><br />
+        <button id="btnConnect">Connect</button>
     </body>
 </html>
