--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,5 +10,11 @@
         <input type="text" id="otherId" />
         <br /><br />
         <button id="btnConnect">Connect</button>
+        <br /><br />
+        <input type="text" id="txtMessage" placeholder="Enter your message"/>
+        <br /><br />
+        <button id="btnSend">Send</button>
+        <br /><br />
+        <button id="btnShowWebcam">Show webcam</button>
     </body>
 </html>
