--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Khoa Pham</title>
-        <script src="bundle.js"></script>
+        
     </head>
     <body>
         <p id="connectId"></p>
@@ -16,5 +16,7 @@
         <button id="btnSend">Send</button>
         <br /><br />
         <button id="btnShowWebcam">Show webcam</button>
+        <video width="320" height="180"/>
+        <script src="bundle.js"></script>
     </body>
 </html>
